doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/s5/17y2jjg937l_q8x8nxj_q1h00000gn/T/AppTranslocation/F5EAD569-EC98-48A4-9FE6-DE549328E43B/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/TalentL/Documents/gitRepos/FirstAssignment
-d
/Users/TalentL/Documents/gitRepos/FirstAssignment/doc
-encoding
UTF-8
-charset
UTF-8
/Users/TalentL/Documents/gitRepos/FirstAssignment/StringArrayUtils.java
<---- end of javadoc command ---->
Loading source file /Users/TalentL/Documents/gitRepos/FirstAssignment/StringArrayUtils.java...
/Users/TalentL/Documents/gitRepos/FirstAssignment/StringArrayUtils.java:58: error: illegal start of expression
    public static String[] reverse(String[] array) {
    ^
1 error
